--- a/testWebsite.html
+++ b/testWebsite.html
@@ -83,7 +83,7 @@
             // Fetch images from an online source (update this with your image hosting)
             for (let i = 1; i <= 85; i++) {
                 var img = document.createElement("img");
-                img.src = `https://yourwebsite.com/images/photo${i}.jpg`; // Replace with actual server URL
+                img.src = `https://raw.githubusercontent.com/srijflix/photo-gallery/main/images/photo${i}.jpg`;
                 img.alt = `Photo ${i}`;
                 img.loading = "lazy";
                 gallery.appendChild(img);
